# AgentForge

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: ADR-AF-001-design.md
include/agentforge/: hydraforge_client.h
src/: hydraforge_client.cpp  main.cpp
